@@ -31,6 +31,6 @@ Tunables:
       dnstap:
         enable: true
         unix-socket: /tmp/dnstap.sock
-        # by default log is enabled for all
+        # by default log is disabled for all
         log-queries: true
         log-responses: true
